<resources>
    <string name="app_name">GAT</string>
    <string name="facebook_app_id">1937935059771206</string>
    <string name="twitter_api_secret">iiUTGYNsXTpwhtmGVIfxEtkBhVHl6VLNrKD4hDxZ2fwNyk9Jdl</string>
    <string name="twitter_api_key">gKxGJeazBQC8Mk5AwLZeMUxcC</string>
    <string name="map_api_key">AIzaSyB6iy69TsVPpstHblohdVn7mGnIrETCSLo</string>
    <string name="hintSearch">Search book</string>
    <string name="start_login_btn">Đăng nhập</string>
    <string name="start_register_btn">Đăng ký</string>
    <string name="login_title">ĐĂNG NHẬP</string>
    <string name="login_bysocial_title"></string>
    <string name="login_forgot_password">Quên mật khẩu?</string>
    <string name="login_button">Đăng nhập</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Mật khẩu</string>
    <string name="login_email_empty">Email không được trống</string>
    <string name="login_email_invalid">Email không hợp lệ</string>
    <string name="login_password_empty">Mật khẩu không được trống</string>
    <string name="login_password_length">Mật khẩu không hợp lệ</string>
    <string name="login_fail_title">Đăng nhập thất bại</string>
    <string name="login_fail_mes">Tài khoản hoặc mật khẩu không đúng,</string>
    <string name="login_forgot_title">Quên mật khẩu</string>
    <string name="forgot_sendreq_btn">Gửi yêu cầu tới email</string>
    <string name="forgot_sendreq_message">Yêu cầu thay đổi sẽ được gửi tới email bên dưới</string>
    <string name="forgot_inputtoken_message">Nhập mã thay đổi mật khẩu  được gửi tới email</string>
    <string name="forgot_inputpass_message">Please input new password</string>
    <string name="forgot_inputtoken_hint">Mã gồm 6 chữ số</string>
    <string name="forgot_inputtoken_length">Mã hợp lệ</string>
    <string name="verify_token_btn">Xác nhận mã </string>
    <string name="reset_pass_btn">Quên mật khẩu</string>
    <string name="register_title">ĐĂNG KÍ</string>
    <string name="register_btn">Đăng ký</string>
    <string name="register_google_btn">Đăng ký bằng tài khoản Google</string>
    <string name="register_face_btn">Đăng ký bằng tài khoản Facebook</string>
    <string name="register_twitter_btn">Đăng ký bằng tài khoản Twitter</string>
    <string name="login_social_cancel">Đăng nhập </string>
    <string name="register_policy">GAT terms and policy</string>
    <string name="authenticating">Đang xác thực...</string>
    <string name="register_update_info_btn">Đăng ký hoàn tất</string>
    <string name="name_field_null">Tên không được để trống</string>
    <string name="btn_add_location">Lưu vị trí</string>
    <string name="btn_pass_over">Tiếp</string>
    <string name="btn_no_save">Bỏ qua</string>
    <string name="title_activity_maps">Chi tiết địa điểm hiện tại</string>
    <string name="default_info_title">Hanoi Capital</string>
    <string name="default_info_snippet">Không tìm thấy đại điểm, vui lòng cấp quyền truy cập vị trí.</string>
    <string name="option_get_place">Lấy địa điểm</string>
    <string name="pick_place">Chọn địa điểm</string>
    <string name="app_tour"><u>Thăm quan ứng dụng</u></string>
    <string name="intro_title_1">KẾT NỐI NGƯỜI ĐỌC</string>
    <string name="intro_content_1">Khám phá những tủ sách tiềm năng xung quanh bạn thông qua công cụ tìm kiếm của GaT.</string>
    <string name="intro_title_2">CHIA SẺ SÁCH</string>
    <string name="intro_content_2">Chia sẻ tủ sách của bạn để có thêm nhiều bạn mới và cùng trao đổi những cuốn sách hay.</string>
    <string name="intro_title_3">THÔNG TIN CHI TIẾT VỀ SÁCH</string>
    <string name="intro_content_3">Tham khảo đánh giá sách của cộng đồng người dùng và đề xuất từ GaT dành riêng cho bạn để lựa chọn cuốn sách phù hợp.</string>
    <string name="sending_failed">Gửi thất bạn</string>
    <string name="sending">Đang gửi...</string>
    <string name="verifying">Đang xác thực...</string>
    <string name="verify_failed">Xác thực thất bại</string>
    <string name="pass_reseting">Changing...</string>
    <string name="reset_pass_failed">Thay đổi mật khẩu thất bại</string>
    <string name="register_failed">Đăng ký thất bại</string>
    <string name="map_connection_failed">Không thể kết nối tới dịch vụ map.</string>
    <string name="error_auto_place">Không tìm thấy địa điểm.</string>
    <string name="service_not_available">Dịch vụ không có sẵn</string>
    <string name="invalid_lat_long_used">Vị trí không hợp lệ</string>
    <string name="no_address_found">Không tìm thấy địa điểm</string>
    <string name="error_detect_location">Không thể tìm thấy vị trí hiện tại.</string>
    <string name="update_location_failed">Không thể cập nhật vị trí</string>
    <string name="update_category_failed">Không thể cập nhật category</string>
    <string name="updating">Đang cập nhật...</string>
    <string name="invalid_location">Vui lòng chọn toạ độ trước.</string>
    <string name="category_1">Sách văn học</string>
    <string name="category_2">Sách kĩ năng</string>
    <string name="category_3">Sách kinh tế</string>
    <string name="category_4">Lịch sử-Địa lý</string>
    <string name="category_5">Sách nghệ thuật</string>
    <string name="category_6">Sách tôn giáo</string>
    <string name="category_7">Sách thiếu nhi</string>
    <string name="category_8">Truyện tranh</string>
    <string name="category_9">Sách khoa học</string>
    <string name="category_10">Sách giáo khoa</string>
    <string name="category_11">Sách giáo trình ĐH</string>
    <string name="category_12">Sách ngoại ngữ</string>
    <string name="category_13">Sách mẹ và bé</string>
    <string name="category_14">Tạp chí</string>
    <string name="category_15">Sách tổng hợp</string>
    <string name="btn_add_category">Thêm loại sách</string>
    <string name="register_category_header">Loại sách yêu thích</string>
    <string name="scan_barcode_header">Quét mã barcode</string>
    <string name="scan_barcode_guide">Di chuyển màn hình camera để quét barcode</string>
    <string name="btn_turn_on_light">Bật đèn flash</string>
    <string name="has_no_flash">Thiết bị không có flash.</string>
    <string name="btn_turn_off_light">Tắt đèn flash</string>
    <string name="isbn_invalid">Barcode không hợp lệ.</string>
    <string name="error_throw">Có lỗi sảy ra.</string>
    <string name="tab_home">Trang chủ</string>
    <string name="tab_personal">Cá nhân</string>
    <string name="tab_scanbarcode">Quét mã</string>
    <string name="tab_notification">Thông báo</string>
    <string name="tab_setting">Cài đặt</string>
    <string name="message_header">Tin nhắn</string>
    <string name="send_message_btn">Gửi</string>
    <string name="go_setting_enable_gps">Mở Cài đặt -> Cho phép truy cập vị trí của bạn.</string>
    <string name="share_near_me">Người dùng gần bạn</string>
    <string name="cover_content_description">Book Image Cover</string>
    <string name="iv_back_description">Back</string>
    <string name="iv_share_description">Chia sẻ</string>
    <string name="most_search_by_user">Sách được mượn nhiều</string>
    <string name="suggest">Đề xuất</string>
    <string name="view_more">Xem thêm</string>
    <string name="ic_chat_description">Chat</string>
    <string name="book_lend">Sách cho mượn</string>
    <string name="book_reading">Sách đang đọc</string>
    <string name="cancel">Huỷ</string>
    <string name="msg_allow_location">Cho phép truy cập vị trí để thấy người chia sẻ sách gần bạn.</string>
    <string name="msg_no_user_near">Không có người chia sẻ gần bạn, nhấp xem thêm để hiển thị nhiều hơn. </string>
    <string name="total_comments">Lượt nhận xét</string>
    <string name="history">Lịch sử</string>
    <string name="show_count_search_result">Hiển thị %1$d kết quả</string>
    <string name="tab_book_name">Tên sách</string>
    <string name="tab_book_author">Tác giả</string>
    <string name="tab_user_name">Người dùng</string>
    <string name="search_result">Kết quả tìm kiếm</string>
    <string name="book_detail">Thông tin sách</string>
    <string name="book_description">Nội dung sách</string>
    <string name="comment">Bình luận</string>
    <string name="none">None</string>
    <string name="list_user_sharing_book">Danh sách người cho mượn</string>
    <string name="wait_for_accept_borrow">Đợi đồng ý</string>
    <string name="is_connecting">Đang liên lạc</string>
    <string name="is_borrowing">Đang mượn</string>
    <string name="wait_your_turn">Đợi đến lượt</string>
    <string name="book_in_sharing">Đang được mượn</string>
    <string name="borrow_book">Mượn sách</string>
    <string name="wait_to_borrow">Đợi mượn</string>
    <string name="add_to_list_reading_book">Thêm vào danh sách đọc</string>
    <string name="want_to_read">Muốn đọc</string>
    <string name="reading_book">Đang đọc</string>
    <string name="red_book">Đã đọc</string>
    <string name="add_to_bookcase">Thêm vào tủ sách</string>
    <string name="total_book_in_bookcase">Số lượng sách có trong tủ</string>
    <string name="let_people_borrow_book">Cho mọi người mượn sách</string>
    <string name="your_comment">Bình luận của bạn</string>
    <string name="your_comment_hint">Bình luận của bạn về cuốn sách này</string>
    <string name="write_comment">Viết bình luận</string>
    <string name="edit_comment">Chỉnh sửa bình luận</string>
    <string name="post_your_comment">ĐĂNG BÌNH LUẬN</string>
    <string name="share">Chia sẻ</string>
    <string name="comment_for_share">Viết chia sẻ cho sách</string>
    <string name="enable_for_share_facebook">Đăng chia sẻ qua Facebook</string>
    <string name="post_the_share">ĐĂNG CHIA SẺ</string>
    <string name="remove_from_reading_list">Xóa khỏi danh sách đọc</string>
    <string name="ask_remove_from_reading_list">Bạn muốn xóa cuốn sách này khỏi danh sách sách đọc?</string>
    <string name="book_not_found">Không tìm thấy ISBN này.</string>
    <string name="isbn_invalid_message">ISBN của bạn không đúng. Vui lòng thử với cuốn sách khác.</string>
    <string name="inputLocationHint">Điền địa điểm của bạn</string>
    <string name="confirm_remove_book">Xóa sách</string>
    <string name="notice">Thông báo</string>
    <string name="need_accept_borrow">Muốn mượn sách</string>
    <string name="message_to_you">Gửi tin nhắn tới bạn</string>
    <string name="people_count_sharing_book">Có %1$d người đang cho mượn sách </string>
    <string name="you_have_count_message_read">Bạn có %1$d tin nhắn chưa đọc</string>
    <string name="someone_request_borrow">Gửi yêu cầu mượn sách \“%1$s\”</string>
    <string name="borrow_unlucky">Sách <b>"%1$s"</b> đã được cho người khác mượn</string>
    <string name="borrow_accept">Đồng ý cho bạn mượn sách \“ %1$s \”</string>
    <string name="notice_has_borrow">Thông báo bạn đã mượn sách \“%1$s \”</string>
    <string name="notice_borrow_needed">Thông báo bạn trả sách \“%1$s \”</string>
    <string name="notice_borrow_refuse">Từ chối cho bạn mượn sách \“%1$s \”</string>
    <string name="notice_lost_book">Thông báo bạn đã làm mất sách \“%1$s \”</string>
    <string name="notice_your_total">Bạn đang mượn %1$d quyển sách từ người dùng khác.</string>
    <string name="notice_total_request">Có %1$d người gửi yêu cầu mượn sách \“%2$s \”</string>
    <string name="notice_borrow_cancel">Huỷ yêu cầu mượn sách \“%1$s \”</string>
    <string name="login_error_header">Đăng nhập thất bại</string>
    <string name="register_error_header">Đăng ký thất bại</string>
    <string name="twitter_description">Đăng nhập bằng Twitter</string>
    <string name="error_ok_btn">OK</string>
    <string name="setting">Cài đặt</string>
    <string name="edit_profile">Sửa thông tin cá nhân</string>
    <string name="change_password">Thay đổi mật khẩu</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="google">Google</string>
    <string name="add_email_password">Thêm email và mật khẩu</string>
    <string name="new_password_hint">Nhập mật khẩu mới</string>
</resources>