<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/navigation_header_height">

        <ImageView
            android:id="@+id/image_view_back"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:scaleType="centerInside"
            android:src="@drawable/narrow_back_black" />

        <TextView
            style="@style/TextViewHeaderTop"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/add_to_list_reading_book"
            android:textColor="@color/colorTextViewDark"
            android:textSize="@dimen/larger_text_view_size" />

        <ImageView
            android:id="@+id/image_button_save"
            android:clickable="true"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="right|center_vertical"
            android:scaleType="centerInside"
            android:src="@drawable/ic_check_green" />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividerDark" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/paddingLarge"
        android:paddingRight="@dimen/paddingLarge"
        android:layout_marginBottom="@dimen/margin_horizontal_large">

        <RadioButton
            android:id="@+id/radio_want_to_read"
            style="@style/RadioButtonStyle"
            android:layout_width="match_parent"
            android:text="@string/want_to_read" />

        <RadioButton
            android:id="@+id/radio_reading_book"
            style="@style/RadioButtonStyle"
            android:layout_width="match_parent"
            android:text="@string/reading_book" />

        <RadioButton
            android:id="@+id/radio_red_book"
            style="@style/RadioButtonStyle"
            android:layout_width="match_parent"
            android:checked="true"
            android:text="@string/red_book" />

    </RadioGroup>


    <Button
        android:id="@+id/button_remove_from_reading_list"
        android:layout_margin="@dimen/margin_horizontal_large"
        android:layout_width="match_parent"
        android:text="@string/remove_from_reading_list"
        android:textAllCaps="false"
        android:textColor="@color/colorRedPrimaryDark"
        android:background="@drawable/bg_rounded_gray"
        android:layout_height="@dimen/button_height" />

</LinearLayout>