<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:id="@+id/verify_token_view">

    <include layout="@layout/layout_activity_top"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_inputpass_message"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textEmail"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textColor="@color/colorGray"
        android:background="@drawable/bg_border_bottom"
        android:text="@string/forgot_sendreq_message"/>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingStart="@dimen/margin_left_right"
        android:paddingEnd="@dimen/margin_left_right"
        android:paddingBottom="@dimen/btn_margin_bt"
        android:background="@drawable/bg_border_bottom">

        <EditText android:id="@+id/text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/new_password_hint"
            android:background="@drawable/text_edit_shape_white"
            android:maxLength="10"
            android:textSize="@dimen/normal_textsize_l"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="@dimen/margin_left_right"
        android:layout_marginRight="@dimen/margin_left_right"
        android:background="@drawable/bg_rounded_blue"
        android:textColor="@color/colorWhite"
        android:text="@string/forgot_sendreq_btn"
        android:textAlignment="center"
        android:paddingStart="60dp"
        android:drawableEnd="@drawable/forma_1"
        android:paddingEnd="30dp"/>
</LinearLayout>