<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:id="@+id/forgot_password_view">

    <include layout="@layout/layout_activity_top"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:paddingTop="20dp"
        android:paddingBottom="50dp"
        android:background="@drawable/bg_border_bottom"
        android:text="@string/forgot_sendreq_message" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_left_right"
        android:paddingEnd="@dimen/margin_left_right"
        android:paddingBottom="@dimen/btn_margin_bt"
        android:background="@drawable/bg_border_bottom">
        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/email_icon_padding"
            android:drawableStart="@drawable/email_input_icon"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/normal_textsize_l"
            android:background="@drawable/text_edit_shape_white"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginLeft="@dimen/margin_left_right"
        android:layout_marginRight="@dimen/margin_left_right"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_rounded_blue"
        android:drawableEnd="@drawable/forma_1"
        android:paddingEnd="@dimen/padding_end"
        android:paddingStart="@dimen/padding_start"
        android:text="@string/forgot_sendreq_btn"
        android:textColor="@color/colorWhite" />
</LinearLayout>